ingress-current.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: paybridge24-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/load-balancer-name":"paybridge24-alb","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/ingress.class":"alb"},"name":"demo-app-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"demo-app-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2026-04-21T08:18:13Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  name: demo-app-ingress
  namespace: default
  resourceVersion: "201723"
  uid: d9532c15-1a29-427f-9678-6d71cac5a861
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: paybridge24-alb-690909383.ap-south-2.elb.amazonaws.com
      ports:
      - port: 80
        protocol: ""
